--- a/pom.xml
+++ b/pom.xml
@@ -48,20 +48,15 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.sf.kxml</groupId>
-			<artifactId>kxml2-min</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.gjouneau</groupId>
+			<artifactId>FleepBotAPI</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
